--- a/module_call.ipynb
+++ b/module_call.ipynb
@@ -58,23 +58,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Precompiling HighDimMixedModels [ced58d7a-d58c-464d-86d9-3a8462bebd28]\n",
-      "└ @ Base loading.jl:1317\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using HighDimMixedModels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,107 +87,15 @@
    "outputs": [],
    "source": [
     "#df = DataFrame(y = rand(rng, 9), a = 1:9, b = rand(rng, 9), c = repeat([\"d\",\"e\",\"f\"], 3), d = vcat(repeat([1,2], 4),1))\n",
-    "df = DataFrame(y = rand(rng, 9), a = 1:1:9, b = rand(rng, 9), c = repeat([\"d\",\"e\",\"f\"], 3), d = rand(rng, 9))\n",
-    "f = @formula(y ~  a + b + c + d)\n",
-    "contrasts = Dict( :a => ContinuousTerm, :b=>ContinuousTerm, :c => CategoricalTerm)\n",
-    "df"
+    "#df = DataFrame(y = rand(rng, 9), a = 1:1:9, b = rand(rng, 9), c = repeat([\"d\",\"e\",\"f\"], 3), d = rand(rng, 9))\n",
+    "#f = @formula(y ~  a + b + c + d)\n",
+    "#contrasts = Dict( :a => ContinuousTerm, :b=>ContinuousTerm, :c => CategoricalTerm)\n",
+    "#df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"data-frame\"><p>5 rows × 4 columns</p><table class=\"data-frame\"><thead><tr><th></th><th>herd</th><th>period</th><th>incid</th><th>hsz</th></tr><tr><th></th><th title=\"String\">String</th><th title=\"String\">String</th><th title=\"Int8\">Int8</th><th title=\"Int8\">Int8</th></tr></thead><tbody><tr><th>1</th><td>H01</td><td>1</td><td>2</td><td>14</td></tr><tr><th>2</th><td>H01</td><td>2</td><td>3</td><td>12</td></tr><tr><th>3</th><td>H01</td><td>3</td><td>4</td><td>9</td></tr><tr><th>4</th><td>H01</td><td>4</td><td>0</td><td>5</td></tr><tr><th>5</th><td>H02</td><td>1</td><td>3</td><td>22</td></tr></tbody></table></div>"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|cccc}\n",
-       "\t& herd & period & incid & hsz\\\\\n",
-       "\t\\hline\n",
-       "\t& String & String & Int8 & Int8\\\\\n",
-       "\t\\hline\n",
-       "\t1 & H01 & 1 & 2 & 14 \\\\\n",
-       "\t2 & H01 & 2 & 3 & 12 \\\\\n",
-       "\t3 & H01 & 3 & 4 & 9 \\\\\n",
-       "\t4 & H01 & 4 & 0 & 5 \\\\\n",
-       "\t5 & H02 & 1 & 3 & 22 \\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/plain": [
-       "\u001b[1m5×4 DataFrame\u001b[0m\n",
-       "\u001b[1m Row \u001b[0m│\u001b[1m herd   \u001b[0m\u001b[1m period \u001b[0m\u001b[1m incid \u001b[0m\u001b[1m hsz  \u001b[0m\n",
-       "\u001b[1m     \u001b[0m│\u001b[90m String \u001b[0m\u001b[90m String \u001b[0m\u001b[90m Int8  \u001b[0m\u001b[90m Int8 \u001b[0m\n",
-       "─────┼─────────────────────────────\n",
-       "   1 │ H01     1           2    14\n",
-       "   2 │ H01     2           3    12\n",
-       "   3 │ H01     3           4     9\n",
-       "   4 │ H01     4           0     5\n",
-       "   5 │ H02     1           3    22"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = DataFrame(MixedModels.dataset(:cbpp))\n",
-    "first(df,5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"data-frame\"><p>5 rows × 4 columns</p><table class=\"data-frame\"><thead><tr><th></th><th>herd</th><th>period</th><th>incid</th><th>hsz</th></tr><tr><th></th><th title=\"String\">String</th><th title=\"Float64\">Float64</th><th title=\"Int8\">Int8</th><th title=\"Int8\">Int8</th></tr></thead><tbody><tr><th>1</th><td>H01</td><td>1.0</td><td>2</td><td>14</td></tr><tr><th>2</th><td>H01</td><td>2.0</td><td>3</td><td>12</td></tr><tr><th>3</th><td>H01</td><td>3.0</td><td>4</td><td>9</td></tr><tr><th>4</th><td>H01</td><td>4.0</td><td>0</td><td>5</td></tr><tr><th>5</th><td>H02</td><td>1.0</td><td>3</td><td>22</td></tr></tbody></table></div>"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|cccc}\n",
-       "\t& herd & period & incid & hsz\\\\\n",
-       "\t\\hline\n",
-       "\t& String & Float64 & Int8 & Int8\\\\\n",
-       "\t\\hline\n",
-       "\t1 & H01 & 1.0 & 2 & 14 \\\\\n",
-       "\t2 & H01 & 2.0 & 3 & 12 \\\\\n",
-       "\t3 & H01 & 3.0 & 4 & 9 \\\\\n",
-       "\t4 & H01 & 4.0 & 0 & 5 \\\\\n",
-       "\t5 & H02 & 1.0 & 3 & 22 \\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/plain": [
-       "\u001b[1m5×4 DataFrame\u001b[0m\n",
-       "\u001b[1m Row \u001b[0m│\u001b[1m herd   \u001b[0m\u001b[1m period  \u001b[0m\u001b[1m incid \u001b[0m\u001b[1m hsz  \u001b[0m\n",
-       "\u001b[1m     \u001b[0m│\u001b[90m String \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Int8  \u001b[0m\u001b[90m Int8 \u001b[0m\n",
-       "─────┼──────────────────────────────\n",
-       "   1 │ H01         1.0      2    14\n",
-       "   2 │ H01         2.0      3    12\n",
-       "   3 │ H01         3.0      4     9\n",
-       "   4 │ H01         4.0      0     5\n",
-       "   5 │ H02         1.0      3    22"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#MixedModels.datasets()\n",
-    "df = DataFrame(MixedModels.dataset(:cbpp))\n",
-    "df[!,:period] = map(x->parse(Float64,x),df[:,:period])\n",
-    "first(df,5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -229,42 +128,27 @@
        "   5 │     1.0  H02         3    22"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#MixedModels.datasets()\n",
+    "df = DataFrame(MixedModels.dataset(:cbpp))\n",
+    "df[!,:period] = map(x->parse(Float64,x),df[:,:period])\n",
     "select!(df,[:period,:herd,:incid,:hsz])\n",
     "first(df,5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "FormulaTerm\n",
-       "Response:\n",
-       "  period(unknown)\n",
-       "Predictors:\n",
-       "  0\n",
-       "  (herd)->1 | herd\n",
-       "  incid(unknown)\n",
-       "  hsz(unknown)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#f = @formula(period ~ 0 + herd + incid + hsz)\n",
-    "f = @formula(period ~ 0 +(1|herd) + incid + hsz )\n",
+    "#f = @formula(period ~ 0 +(1|herd) + incid + hsz )\n",
     "#f = @formula(period ~ herd + incid + hsz)\n",
     "#contrasts = Dict( :incid => ContinuousTerm, :hsz => ContinuousTerm, :herd => CategoricalTerm)\n",
     "#fit(MixedModel, @formula(period ~ incid + hsz +(1|herd)), df, REML = true)"
@@ -394,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -409,18 +293,19 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "f = @formula(period ~ 0 +(1|herd) + incid + hsz )\n",
     "HMM = highDimMixedModel(f, df, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +319,7 @@
        " 3.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +344,7 @@
        " 22.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +364,7 @@
        "(56, 15)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,43 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "HMM::highDimMixedModel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "HMM::MixedModel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
