--- a/module_check.ipynb
+++ b/module_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -16,8 +16,7 @@
       " \u001b[90m [ced58d7a] \u001b[39m\u001b[37mHighDimMixedModels v0.1.0 `~/.julia/dev/HighDimMixedModels`\u001b[39m\n",
       " \u001b[90m [14b8a8f1] \u001b[39m\u001b[37mPkgTemplates v0.7.19\u001b[39m\n",
       " \u001b[90m [bd369af6] \u001b[39m\u001b[37mTables v1.6.0\u001b[39m\n",
-      " \u001b[90m [44d3d7a6] \u001b[39m\u001b[37mWeave v0.10.10\u001b[39m\n",
-      " \u001b[90m [508b3551] \u001b[39m\u001b[37mhighDimMM v0.1.0 `~/.julia/dev/highDimMM`\u001b[39m\n"
+      " \u001b[90m [44d3d7a6] \u001b[39m\u001b[37mWeave v0.10.10\u001b[39m\n"
      ]
     }
    ],
@@ -29,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#using HighDimMixedModels\n",
-    "using highDimMM"
+    "using HighDimMixedModels\n",
+    "#using highDimMM"
    ]
   },
   {
@@ -66,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +98,7 @@
        "   5 │     1.0  H02         3    22"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +124,7 @@
        "  :incid => ContinuousTerm"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +155,7 @@
        "  (herd)->1 | herd"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -321,14 +320,14 @@
      "output_type": "stream",
      "text": [
       "┌ Warning: n >= p in high dimensional matrix\n",
-      "└ @ highDimMM /Users/zyxu/.julia/dev/highDimMM/src/bricks.jl:12\n"
+      "└ @ HighDimMixedModels /Users/zyxu/.julia/dev/HighDimMixedModels/src/bricks.jl:12\n"
      ]
     },
     {
      "data": {
       "text/plain": []
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,32 +338,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5-element Vector{Float64}:\n",
+       "10-element Vector{Float64}:\n",
        " 2.0\n",
        " 3.0\n",
        " 4.0\n",
        " 0.0\n",
-       " 3.0"
+       " 3.0\n",
+       " 1.0\n",
+       " 1.0\n",
+       " 8.0\n",
+       " 2.0\n",
+       " 0.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "first(HMM.M.M,5)"
+    "first(HMM.M.M,10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +382,7 @@
        " 22.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +402,7 @@
        "(56, 15)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,22 +413,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in 1:size(df,2)\n",
-    "    if(isa(df[1,i], Number))\n",
-    "        df[!,i] = convert(Vector{Float64},df[:,i])\n",
-    "    end\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FormulaTerm\n",
+       "Response:\n",
+       "  period(continuous)\n",
+       "Predictors:\n",
+       "  0\n",
+       "  incid(continuous)\n",
+       "  hsz(continuous)\n",
+       "  (1 | herd)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sch = schema(df)\n",
     "form = apply_schema(f, sch, highDimMixedModel)"
@@ -432,9 +441,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([2.0 14.0; 3.0 12.0; … ; 1.0 15.0; 0.0 15.0], [1.0 0.0 … 0.0 0.0; 1.0 0.0 … 0.0 0.0; … ; 0.0 0.0 … 0.0 1.0; 0.0 0.0 … 0.0 1.0])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# when the random effect is the last term, can use form directly instead of form.rhs\n",
     "FixedEffectMatrix,Z = modelmatrix(form,df)"
@@ -449,27 +469,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([2.0 14.0; 3.0 12.0; … ; 1.0 15.0; 0.0 15.0], [1.0 0.0 … 0.0 0.0; 1.0 0.0 … 0.0 0.0; … ; 0.0 0.0 … 0.0 1.0; 0.0 0.0 … 0.0 1.0])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "modelmatrix(form.rhs,df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1.0, 2.0, 3.0, 4.0, 1.0, 2.0, 3.0, 1.0, 2.0, 3.0  …  3.0, 4.0, 1.0, 2.0, 3.0, 4.0, 1.0, 2.0, 3.0, 4.0], ([2.0 14.0; 3.0 12.0; … ; 1.0 15.0; 0.0 15.0], [1.0 0.0 … 0.0 0.0; 1.0 0.0 … 0.0 0.0; … ; 0.0 0.0 … 0.0 1.0; 0.0 0.0 … 0.0 1.0]))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y, pre = modelcols(form,df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: n >= p in high dimensional matrix\n",
+      "└ @ HighDimMixedModels /Users/zyxu/.julia/dev/HighDimMixedModels/src/bricks.jl:12\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "XMat{Float64, Matrix{Float64}}([14.0; 12.0; … ; 15.0; 15.0])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "numOfHDM = 1\n",
     "M = highDimMat(FixedEffectMatrix[:,1:numOfHDM])\n",
@@ -499,121 +560,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Warning: ProgressMeter by default refresh meters with additional information in IJulia via `IJulia.clear_output`, which clears all outputs in the cell. \n",
-      "│  - To prevent this behaviour, do `ProgressMeter.ijulia_behavior(:append)`. \n",
-      "│  - To disable this warning message, do `ProgressMeter.ijulia_behavior(:clear)`.\n",
-      "└ @ ProgressMeter /Users/zyxu/.julia/packages/ProgressMeter/Vf8un/src/ProgressMeter.jl:620\n",
-      "\u001b[32mMinimizing 16 \t Time: 0:00:00 (24.16 ms/it)\u001b[39m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "\\begin{tabular}\n",
-       "{l | r | r | r | r | r}\n",
-       " & Est. & SE & z & p & $\\sigma_\\text{herd}$ \\\\\n",
-       "\\hline\n",
-       "incid & -0.2939 & 0.0890 & -3.30 & 0.0010 &   \\\\\n",
-       "hsz & 0.1317 & 0.0239 & 5.52 & <1e-07 &   \\\\\n",
-       "(Intercept) &  &  &  &  & 1.1569 \\\\\n",
-       "Residual & 1.3496 &  &  &  &  \\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "|             |    Est. |     SE |     z |      p | σ_herd |\n",
-       "|:----------- | -------:| ------:| -----:| ------:| ------:|\n",
-       "| incid       | -0.2939 | 0.0890 | -3.30 | 0.0010 |        |\n",
-       "| hsz         |  0.1317 | 0.0239 |  5.52 | <1e-07 |        |\n",
-       "| (Intercept) |         |        |       |        | 1.1569 |\n",
-       "| Residual    |  1.3496 |        |       |        |        |\n"
-      ],
-      "text/plain": [
-       "Linear mixed model fit by REML\n",
-       " period ~ 0 + incid + hsz + (1 | herd)\n",
-       " REML criterion at convergence: 219.11119977822892\n",
-       "\n",
-       "Variance components:\n",
-       "            Column   VarianceStd.Dev.\n",
-       "herd     (Intercept)  1.33834 1.15687\n",
-       "Residual              1.82132 1.34956\n",
-       " Number of obs: 56; levels of grouping factors: 15\n",
-       "\n",
-       "  Fixed-effects parameters:\n",
-       "─────────────────────────────────────────────\n",
-       "           Coef.  Std. Error      z  Pr(>|z|)\n",
-       "─────────────────────────────────────────────\n",
-       "incid  -0.293874   0.0890102  -3.30    0.0010\n",
-       "hsz     0.131742   0.0238714   5.52    <1e-07\n",
-       "─────────────────────────────────────────────"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ml = fit(MixedModel, @formula(period ~ 0 + incid + hsz +(1|herd)), df, REML = true)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "\\begin{tabular}\n",
-       "{l | r | r | r | r | r}\n",
-       " & Est. & SE & z & p & $\\sigma_\\text{herd}$ \\\\\n",
-       "\\hline\n",
-       "incid & -0.2939 & 0.0890 & -3.30 & 0.0010 &   \\\\\n",
-       "hsz & 0.1317 & 0.0239 & 5.52 & <1e-07 &   \\\\\n",
-       "(Intercept) &  &  &  &  & 1.1569 \\\\\n",
-       "Residual & 1.3496 &  &  &  &  \\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "|             |    Est. |     SE |     z |      p | σ_herd |\n",
-       "|:----------- | -------:| ------:| -----:| ------:| ------:|\n",
-       "| incid       | -0.2939 | 0.0890 | -3.30 | 0.0010 |        |\n",
-       "| hsz         |  0.1317 | 0.0239 |  5.52 | <1e-07 |        |\n",
-       "| (Intercept) |         |        |       |        | 1.1569 |\n",
-       "| Residual    |  1.3496 |        |       |        |        |\n"
-      ],
-      "text/plain": [
-       "Linear mixed model fit by REML\n",
-       " period ~ 0 + incid + hsz + (1 | herd)\n",
-       " REML criterion at convergence: 219.11119977822892\n",
-       "\n",
-       "Variance components:\n",
-       "            Column   VarianceStd.Dev.\n",
-       "herd     (Intercept)  1.33834 1.15687\n",
-       "Residual              1.82132 1.34956\n",
-       " Number of obs: 56; levels of grouping factors: 15\n",
-       "\n",
-       "  Fixed-effects parameters:\n",
-       "─────────────────────────────────────────────\n",
-       "           Coef.  Std. Error      z  Pr(>|z|)\n",
-       "─────────────────────────────────────────────\n",
-       "incid  -0.293874   0.0890102  -3.30    0.0010\n",
-       "hsz     0.131742   0.0238714   5.52    <1e-07\n",
-       "─────────────────────────────────────────────"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ml = MixedModels.fit(MixedModel, @formula(period ~ 0 + incid + hsz +(1|herd)), df, REML = true)"
    ]
@@ -728,42 +686,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first(HMM.y,5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first(HMM.M.M,5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first(HMM.X.X,5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "HMM.Z.Z ## This is wrong! Should have 15 columns"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -854,6 +776,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: ProgressMeter by default refresh meters with additional information in IJulia via `IJulia.clear_output`, which clears all outputs in the cell. \n",
+      "│  - To prevent this behaviour, do `ProgressMeter.ijulia_behavior(:append)`. \n",
+      "│  - To disable this warning message, do `ProgressMeter.ijulia_behavior(:clear)`.\n",
+      "└ @ ProgressMeter /Users/zyxu/.julia/packages/ProgressMeter/Vf8un/src/ProgressMeter.jl:620\n",
+      "\u001b[32mMinimizing 16 \t Time: 0:00:00 (30.18 ms/it)\u001b[39m\n"
+     ]
+    },
+    {
      "data": {
       "text/latex": [
        "\\begin{tabular}\n",
@@ -905,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +979,7 @@
        "Return code:              XTOL_REACHED\n"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
