--- a/demos/vignette.ipynb
+++ b/demos/vignette.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -12,8 +12,10 @@
       "\u001b[36m\u001b[1m     Project\u001b[22m\u001b[39m demo v0.1.0\n",
       "\u001b[32m\u001b[1m      Status\u001b[22m\u001b[39m `~/Documents/julia/demo/Project.toml`\n",
       " \u001b[90m [336ed68f] \u001b[39m\u001b[37mCSV v0.9.6\u001b[39m\n",
+      " \u001b[90m [324d7699] \u001b[39m\u001b[37mCategoricalArrays v0.10.2\u001b[39m\n",
       " \u001b[90m [7876af07] \u001b[39m\u001b[37mExample v0.5.4 `~/.julia/dev/Example`\u001b[39m\n",
       " \u001b[90m [ced58d7a] \u001b[39m\u001b[37mHighDimMixedModels v0.1.0 `~/.julia/dev/HighDimMixedModels`\u001b[39m\n",
+      " \u001b[90m [a1dec852] \u001b[39m\u001b[37mMetida v0.12.4\u001b[39m\n",
       " \u001b[90m [ff71e718] \u001b[39m\u001b[37mMixedModels v4.6.0\u001b[39m\n",
       " \u001b[90m [14b8a8f1] \u001b[39m\u001b[37mPkgTemplates v0.7.19\u001b[39m\n",
       " \u001b[90m [bd369af6] \u001b[39m\u001b[37mTables v1.6.0\u001b[39m\n",
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling HighDimMixedModels [ced58d7a-d58c-464d-86d9-3a8462bebd28]\n",
+      "└ @ Base loading.jl:1317\n",
+      "WARNING: Method definition (::Type{HighDimMixedModels.highDimMixedModel{T} where T<:AbstractFloat})(StatsModels.FormulaTerm{L, R} where R where L, DataFrames.DataFrame, Base.Dict{Symbol, UnionAll}, Union{Int64, AbstractArray{Int64, 1}}, Union{Int64, AbstractArray{Int64, 1}}, Union{Int64, AbstractArray{Int64, 1}}) where {T} in module HighDimMixedModels at /Users/zyxu/.julia/dev/HighDimMixedModels/src/bricks.jl:194 overwritten at /Users/zyxu/.julia/dev/HighDimMixedModels/src/bricks.jl:341.\n",
+      "  ** incremental compilation may be fatally broken for this module **\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "using HighDimMixedModels"
    ]
@@ -73,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +120,7 @@
        "   5 │     1.0  H02         3    22"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -130,13 +144,12 @@
        "Response:\n",
        "  period(unknown)\n",
        "Predictors:\n",
-       "  0\n",
        "  incid(unknown)\n",
        "  hsz(unknown)\n",
        "  (herd)->1 | herd"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +189,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,21 +207,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "AssertionError: sum(HMM.M.M .!= df[:, :incid]) == 0",
+     "output_type": "error",
+     "traceback": [
+      "AssertionError: sum(HMM.M.M .!= df[:, :incid]) == 0",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[8]:1",
+      " [2] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1094"
+     ]
+    }
+   ],
    "source": [
     "@assert sum(HMM.M.M .!= df[:,:incid]) == 0\n",
     "@assert sum(HMM.X.X .!= df[:,:hsz]) == 0\n",
     "@assert size(HMM.Z.Z) == (56,15)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -226,9 +249,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: ProgressMeter by default refresh meters with additional information in IJulia via `IJulia.clear_output`, which clears all outputs in the cell. \n",
+      "│  - To prevent this behaviour, do `ProgressMeter.ijulia_behavior(:append)`. \n",
+      "│  - To disable this warning message, do `ProgressMeter.ijulia_behavior(:clear)`.\n",
+      "└ @ ProgressMeter /Users/zyxu/.julia/packages/ProgressMeter/Vf8un/src/ProgressMeter.jl:620\n",
+      "\u001b[32mMinimizing 16 \t Time: 0:00:00 (30.89 ms/it)\u001b[39m\n"
+     ]
+    },
     {
      "data": {
       "text/latex": [
@@ -270,7 +304,7 @@
        "─────────────────────────────────────────────"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,85 +315,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "\\begin{tabular}\n",
-       "{l | l}\n",
-       " &  \\\\\n",
-       "\\hline\n",
-       "\\textbf{Initialization} &  \\\\\n",
-       "Initial parameter vector & [1.0] \\\\\n",
-       "Initial objective value & 219.28154799380482 \\\\\n",
-       "\\textbf{Optimizer settings}  &  \\\\\n",
-       "Optimizer (from NLopt) & \\texttt{LN\\_BOBYQA} \\\\\n",
-       "Lower bounds & [0.0] \\\\\n",
-       "\\texttt{ftol\\_rel} & 1.0e-12 \\\\\n",
-       "\\texttt{ftol\\_abs} & 1.0e-8 \\\\\n",
-       "\\texttt{xtol\\_rel} & 0.0 \\\\\n",
-       "\\texttt{xtol\\_abs} & [1.0e-10] \\\\\n",
-       "\\texttt{initial\\_step} & [0.75] \\\\\n",
-       "\\texttt{maxfeval} & -1 \\\\\n",
-       "\\texttt{maxtime} & -1.0 \\\\\n",
-       "\\textbf{Result} &  \\\\\n",
-       "Function evaluations & 15 \\\\\n",
-       "Final parameter vector & [0.8572] \\\\\n",
-       "Final objective value & 219.1112 \\\\\n",
-       "Return code & \\texttt{FTOL\\_REACHED} \\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "|                          |                    |\n",
-       "|:------------------------ |:------------------ |\n",
-       "| **Initialization**       |                    |\n",
-       "| Initial parameter vector | [1.0]              |\n",
-       "| Initial objective value  | 219.28154799380482 |\n",
-       "| **Optimizer settings**   |                    |\n",
-       "| Optimizer (from NLopt)   | `LN_BOBYQA`        |\n",
-       "| Lower bounds             | [0.0]              |\n",
-       "| `ftol_rel`               | 1.0e-12            |\n",
-       "| `ftol_abs`               | 1.0e-8             |\n",
-       "| `xtol_rel`               | 0.0                |\n",
-       "| `xtol_abs`               | [1.0e-10]          |\n",
-       "| `initial_step`           | [0.75]             |\n",
-       "| `maxfeval`               | -1                 |\n",
-       "| `maxtime`                | -1.0               |\n",
-       "| **Result**               |                    |\n",
-       "| Function evaluations     | 15                 |\n",
-       "| Final parameter vector   | [0.8572]           |\n",
-       "| Final objective value    | 219.1112           |\n",
-       "| Return code              | `FTOL_REACHED`     |\n"
-      ],
-      "text/plain": [
-       "Initial parameter vector: [1.0]\n",
-       "Initial objective value:  219.28154799380482\n",
-       "\n",
-       "Optimizer (from NLopt):   LN_BOBYQA\n",
-       "Lower bounds:             [0.0]\n",
-       "ftol_rel:                 1.0e-12\n",
-       "ftol_abs:                 1.0e-8\n",
-       "xtol_rel:                 0.0\n",
-       "xtol_abs:                 [1.0e-10]\n",
-       "initial_step:             [0.75]\n",
-       "maxfeval:                 -1\n",
-       "maxtime:                  -1.0\n",
-       "\n",
-       "Function evaluations:     15\n",
-       "Final parameter vector:   [0.8572166056676385]\n",
-       "Final objective value:    219.11119977822892\n",
-       "Return code:              FTOL_REACHED\n"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear mixed model fit by REML\n",
+      " period ~ 0 + incid + hsz + (1 | herd)\n",
+      " REML criterion at convergence: 219.11119977822892\n",
+      "\n",
+      "Variance components:\n",
+      "            Column   VarianceStd.Dev.\n",
+      "herd     (Intercept)  1.33834 1.15687\n",
+      "Residual              1.82132 1.34956\n",
+      " Number of obs: 56; levels of grouping factors: 15\n",
+      "\n",
+      "  Fixed-effects parameters:\n",
+      "─────────────────────────────────────────────\n",
+      "           Coef.  Std. Error      z  Pr(>|z|)\n",
+      "─────────────────────────────────────────────\n",
+      "incid  -0.293874   0.0890102  -3.30    0.0010\n",
+      "hsz     0.131742   0.0238714   5.52    <1e-07\n",
+      "─────────────────────────────────────────────"
+     ]
     }
    ],
    "source": [
-    "ml.optsum"
+    "show(ml)"
    ]
   },
   {
@@ -378,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +461,7 @@
        " -0.2938738291611581"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +482,7 @@
        " 0.1317420744001128"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
