--- a/demos/draft_for_construct_highDim_data.ipynb
+++ b/demos/draft_for_construct_highDim_data.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "\u001b[36m                                                              42 columns omitted\u001b[0m"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,13 +278,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div class=\"data-frame\"><p>5 rows × 8 columns</p><table class=\"data-frame\"><thead><tr><th></th><th>...45</th><th>...46</th><th>...47</th><th>...48</th><th>...49</th><th>...50</th><th>response</th><th>trt</th></tr><tr><th></th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"String\">String</th></tr></thead><tbody><tr><th>1</th><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.585195</td><td>B</td></tr><tr><th>2</th><td>0.0</td><td>1.5</td><td>0.0</td><td>0.0</td><td>0.5</td><td>0.0</td><td>0.0773379</td><td>B</td></tr><tr><th>3</th><td>0.5</td><td>1.0</td><td>0.0</td><td>1.0</td><td>0.5</td><td>0.0</td><td>0.716628</td><td>C</td></tr><tr><th>4</th><td>0.5</td><td>1.0</td><td>0.0</td><td>0.0</td><td>0.5</td><td>0.0</td><td>0.320357</td><td>B</td></tr><tr><th>5</th><td>0.5</td><td>0.0</td><td>0.0</td><td>1.0</td><td>0.5</td><td>0.0</td><td>0.653093</td><td>B</td></tr></tbody></table></div>"
+       "<div class=\"data-frame\"><p>5 rows × 8 columns</p><table class=\"data-frame\"><thead><tr><th></th><th>...45</th><th>...46</th><th>...47</th><th>...48</th><th>...49</th><th>...50</th><th>response</th><th>trt</th></tr><tr><th></th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"String\">String</th></tr></thead><tbody><tr><th>1</th><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.585195</td><td>C</td></tr><tr><th>2</th><td>0.0</td><td>1.5</td><td>0.0</td><td>0.0</td><td>0.5</td><td>0.0</td><td>0.0773379</td><td>C</td></tr><tr><th>3</th><td>0.5</td><td>1.0</td><td>0.0</td><td>1.0</td><td>0.5</td><td>0.0</td><td>0.716628</td><td>C</td></tr><tr><th>4</th><td>0.5</td><td>1.0</td><td>0.0</td><td>0.0</td><td>0.5</td><td>0.0</td><td>0.320357</td><td>A</td></tr><tr><th>5</th><td>0.5</td><td>0.0</td><td>0.0</td><td>1.0</td><td>0.5</td><td>0.0</td><td>0.653093</td><td>C</td></tr></tbody></table></div>"
       ],
       "text/latex": [
        "\\begin{tabular}{r|cccccccc}\n",
@@ -292,11 +292,11 @@
        "\t\\hline\n",
        "\t& Float64 & Float64 & Float64 & Float64 & Float64 & Float64 & Float64 & String\\\\\n",
        "\t\\hline\n",
-       "\t1 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.585195 & B \\\\\n",
-       "\t2 & 0.0 & 1.5 & 0.0 & 0.0 & 0.5 & 0.0 & 0.0773379 & B \\\\\n",
+       "\t1 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.585195 & C \\\\\n",
+       "\t2 & 0.0 & 1.5 & 0.0 & 0.0 & 0.5 & 0.0 & 0.0773379 & C \\\\\n",
        "\t3 & 0.5 & 1.0 & 0.0 & 1.0 & 0.5 & 0.0 & 0.716628 & C \\\\\n",
-       "\t4 & 0.5 & 1.0 & 0.0 & 0.0 & 0.5 & 0.0 & 0.320357 & B \\\\\n",
-       "\t5 & 0.5 & 0.0 & 0.0 & 1.0 & 0.5 & 0.0 & 0.653093 & B \\\\\n",
+       "\t4 & 0.5 & 1.0 & 0.0 & 0.0 & 0.5 & 0.0 & 0.320357 & A \\\\\n",
+       "\t5 & 0.5 & 0.0 & 0.0 & 1.0 & 0.5 & 0.0 & 0.653093 & C \\\\\n",
        "\\end{tabular}\n"
       ],
       "text/plain": [
@@ -304,14 +304,14 @@
        "\u001b[1m Row \u001b[0m│\u001b[1m ...45   \u001b[0m\u001b[1m ...46   \u001b[0m\u001b[1m ...47   \u001b[0m\u001b[1m ...48   \u001b[0m\u001b[1m ...49   \u001b[0m\u001b[1m ...50   \u001b[0m\u001b[1m response  \u001b[0m\u001b[1m trt   \u001b[0m ⋯\n",
        "\u001b[1m     \u001b[0m│\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64   \u001b[0m\u001b[90m String\u001b[0m ⋯\n",
        "─────┼──────────────────────────────────────────────────────────────────────────\n",
-       "   1 │     0.0      0.0      0.0      0.0      0.0      0.0  0.585195   B      ⋯\n",
-       "   2 │     0.0      1.5      0.0      0.0      0.5      0.0  0.0773379  B\n",
+       "   1 │     0.0      0.0      0.0      0.0      0.0      0.0  0.585195   C      ⋯\n",
+       "   2 │     0.0      1.5      0.0      0.0      0.5      0.0  0.0773379  C\n",
        "   3 │     0.5      1.0      0.0      1.0      0.5      0.0  0.716628   C\n",
-       "   4 │     0.5      1.0      0.0      0.0      0.5      0.0  0.320357   B\n",
-       "   5 │     0.5      0.0      0.0      1.0      0.5      0.0  0.653093   B      ⋯"
+       "   4 │     0.5      1.0      0.0      0.0      0.5      0.0  0.320357   A\n",
+       "   5 │     0.5      0.0      0.0      1.0      0.5      0.0  0.653093   C      ⋯"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -502,34 +502,34 @@
       "text/plain": [
        "30×3 HighDimMixedModels.ReMat{Float64, MixedModels.ReMat{Float64, 1}}:\n",
        " 0.0  0.0  1.0\n",
-       " 1.0  0.0  0.0\n",
-       " 0.0  1.0  0.0\n",
        " 0.0  0.0  1.0\n",
        " 0.0  0.0  1.0\n",
        " 1.0  0.0  0.0\n",
        " 0.0  0.0  1.0\n",
-       " 0.0  1.0  0.0\n",
+       " 1.0  0.0  0.0\n",
        " 0.0  1.0  0.0\n",
        " 1.0  0.0  0.0\n",
-       " 0.0  0.0  1.0\n",
        " 1.0  0.0  0.0\n",
+       " 0.0  0.0  1.0\n",
+       " 0.0  1.0  0.0\n",
+       " 0.0  0.0  1.0\n",
        " 1.0  0.0  0.0\n",
        " ⋮         \n",
        " 1.0  0.0  0.0\n",
-       " 0.0  1.0  0.0\n",
-       " 0.0  1.0  0.0\n",
-       " 1.0  0.0  0.0\n",
        " 0.0  0.0  1.0\n",
-       " 1.0  0.0  0.0\n",
-       " 1.0  0.0  0.0\n",
+       " 0.0  1.0  0.0\n",
+       " 0.0  1.0  0.0\n",
+       " 0.0  1.0  0.0\n",
        " 0.0  0.0  1.0\n",
        " 0.0  0.0  1.0\n",
        " 1.0  0.0  0.0\n",
-       " 0.0  1.0  0.0\n",
+       " 1.0  0.0  0.0\n",
+       " 1.0  0.0  0.0\n",
+       " 0.0  0.0  1.0\n",
        " 0.0  1.0  0.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,13 +542,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div class=\"data-frame\"><p>5 rows × 8 columns</p><table class=\"data-frame\"><thead><tr><th></th><th>...45</th><th>...46</th><th>...47</th><th>...48</th><th>...49</th><th>...50</th><th>response</th><th>trt</th></tr><tr><th></th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"String\">String</th></tr></thead><tbody><tr><th>1</th><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.585195</td><td>C</td></tr><tr><th>2</th><td>0.0</td><td>1.5</td><td>0.0</td><td>0.0</td><td>0.5</td><td>0.0</td><td>0.0773379</td><td>A</td></tr><tr><th>3</th><td>0.5</td><td>1.0</td><td>0.0</td><td>1.0</td><td>0.5</td><td>0.0</td><td>0.716628</td><td>B</td></tr><tr><th>4</th><td>0.5</td><td>1.0</td><td>0.0</td><td>0.0</td><td>0.5</td><td>0.0</td><td>0.320357</td><td>C</td></tr><tr><th>5</th><td>0.5</td><td>0.0</td><td>0.0</td><td>1.0</td><td>0.5</td><td>0.0</td><td>0.653093</td><td>C</td></tr></tbody></table></div>"
+       "<div class=\"data-frame\"><p>5 rows × 8 columns</p><table class=\"data-frame\"><thead><tr><th></th><th>...45</th><th>...46</th><th>...47</th><th>...48</th><th>...49</th><th>...50</th><th>response</th><th>trt</th></tr><tr><th></th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"String\">String</th></tr></thead><tbody><tr><th>1</th><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.585195</td><td>C</td></tr><tr><th>2</th><td>0.0</td><td>1.5</td><td>0.0</td><td>0.0</td><td>0.5</td><td>0.0</td><td>0.0773379</td><td>C</td></tr><tr><th>3</th><td>0.5</td><td>1.0</td><td>0.0</td><td>1.0</td><td>0.5</td><td>0.0</td><td>0.716628</td><td>C</td></tr><tr><th>4</th><td>0.5</td><td>1.0</td><td>0.0</td><td>0.0</td><td>0.5</td><td>0.0</td><td>0.320357</td><td>A</td></tr><tr><th>5</th><td>0.5</td><td>0.0</td><td>0.0</td><td>1.0</td><td>0.5</td><td>0.0</td><td>0.653093</td><td>C</td></tr></tbody></table></div>"
       ],
       "text/latex": [
        "\\begin{tabular}{r|cccccccc}\n",
@@ -557,9 +557,9 @@
        "\t& Float64 & Float64 & Float64 & Float64 & Float64 & Float64 & Float64 & String\\\\\n",
        "\t\\hline\n",
        "\t1 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.0 & 0.585195 & C \\\\\n",
-       "\t2 & 0.0 & 1.5 & 0.0 & 0.0 & 0.5 & 0.0 & 0.0773379 & A \\\\\n",
-       "\t3 & 0.5 & 1.0 & 0.0 & 1.0 & 0.5 & 0.0 & 0.716628 & B \\\\\n",
-       "\t4 & 0.5 & 1.0 & 0.0 & 0.0 & 0.5 & 0.0 & 0.320357 & C \\\\\n",
+       "\t2 & 0.0 & 1.5 & 0.0 & 0.0 & 0.5 & 0.0 & 0.0773379 & C \\\\\n",
+       "\t3 & 0.5 & 1.0 & 0.0 & 1.0 & 0.5 & 0.0 & 0.716628 & C \\\\\n",
+       "\t4 & 0.5 & 1.0 & 0.0 & 0.0 & 0.5 & 0.0 & 0.320357 & A \\\\\n",
        "\t5 & 0.5 & 0.0 & 0.0 & 1.0 & 0.5 & 0.0 & 0.653093 & C \\\\\n",
        "\\end{tabular}\n"
       ],
@@ -569,13 +569,13 @@
        "\u001b[1m     \u001b[0m│\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64   \u001b[0m\u001b[90m String\u001b[0m ⋯\n",
        "─────┼──────────────────────────────────────────────────────────────────────────\n",
        "   1 │     0.0      0.0      0.0      0.0      0.0      0.0  0.585195   C      ⋯\n",
-       "   2 │     0.0      1.5      0.0      0.0      0.5      0.0  0.0773379  A\n",
-       "   3 │     0.5      1.0      0.0      1.0      0.5      0.0  0.716628   B\n",
-       "   4 │     0.5      1.0      0.0      0.0      0.5      0.0  0.320357   C\n",
+       "   2 │     0.0      1.5      0.0      0.0      0.5      0.0  0.0773379  C\n",
+       "   3 │     0.5      1.0      0.0      1.0      0.5      0.0  0.716628   C\n",
+       "   4 │     0.5      1.0      0.0      0.0      0.5      0.0  0.320357   A\n",
        "   5 │     0.5      0.0      0.0      1.0      0.5      0.0  0.653093   C      ⋯"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
       " [11] highDimMixedModel(df::DataFrame, nameOfy::String, nameOfReMat::String, idOfHDM::UnitRange{Int64}, idOfXMat::UnitRange{Int64})",
       "    @ HighDimMixedModels ~/.julia/dev/HighDimMixedModels/src/bricks.jl:383",
       " [12] top-level scope",
-      "    @ In[6]:1",
+      "    @ In[17]:1",
       " [13] eval",
       "    @ ./boot.jl:360 [inlined]",
       " [14] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
